# TrabalhoMATA52-2

./: .gitignore  CMakeLists.txt  README.md  entrada.txt  main.c  saida.txt  temp.c  test.txt
